# demo-python-rabbitmq

./: .env.example  README.md  consumer.py  producer.py  pyproject.toml  receive_logs.py  receive_logs_direct.py  receive_logs_topic.py  rpc_client.py  rpc_server.py  send_log.py  send_log_direct.py  send_log_topic.py  task.py  worker.py
