[tool.poetry]
name = "demo-python-rabbitmq"
version = "0.1.0"
description = ""
authors = ["natthasath <natthasath.sak@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "demo_python_rabbitmq"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
